1.Updated Home page with additional buttons to the pages; could add some additional info like news to fill in the space 2. Created the structure for the APIS in F1; API has a bug not showing information

--- a/my-react-app/src/styling/navbar.css
+++ b/my-react-app/src/styling/navbar.css
@@ -1,22 +1,22 @@
 /* Navbar styling */
 .NavbarMenu .navbar {
-    background-color: red;
-    font-size: 20px;
-    padding: 10px;
-    display: flex;
-    justify-content: center;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .NavbarMenu .nav-link {
-    color: #fff;
-    text-decoration: none;
-    margin-right: 20px;
-    font-weight: bold;
-    transition: all 0.3s ease-in-out;
-  }
-  
-  .NavbarMenu .nav-link:hover {
-    text-decoration: none;
-    transform: translateY(-2px);
-  }
+  background-color: red;
+  font-size: 20px;
+  padding: 10px;
+  display: flex;
+  justify-content: center;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.NavbarMenu .nav-link {
+  color: #fff;
+  text-decoration: none;
+  margin-right: 20px;
+  font-weight: bold;
+  transition: all 0.3s ease-in-out;
+}
+
+.HomNavbarMenu .nav-link:hover {
+  text-decoration: none;
+  transform: translateY(-2px);
+}
